[package]
name = "autobase"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
description = "Automatically generate BASE tables for OpenType fonts"
repository = "https://github.com/simoncozens/autobase"

[[bin]]
name = "autobase"
path = "src/main.rs"

[[bin]]
name = "dump-base"
path = "src/dump_base.rs"

[dependencies]
ucd = "0.1.1"
# Note: keep transitive read-fonts in sync for skrifa, write-fonts, and fontheight
skrifa = "=0.37.0"
write-fonts = "=0.43.0"
fontheight = "=0.1.7"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
log = "0.4.25"
rayon = "1.10"
static-lang-word-lists = "0.3.0"
clap-verbosity-flag = "3.0.3"
env_logger = "0.11.8"
serde = "1.0.223"
toml = "0.9.5"
