[package]
name = "autobase-cli"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
description = "Automatically generate BASE tables for OpenType fonts"
repository = "https://github.com/simoncozens/autobase"

[[bin]]
name = "autobase"
path = "src/main.rs"

[[bin]]
name = "dump-base"
path = "src/dump_base.rs"

[dependencies]
autobase = { path = "../autobase" }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity = "2.1.0"
env_logger = "0.11.8"
log = "0.4.25"
skrifa = "=0.37.0"
write-fonts = "=0.43.0"
fontheight = "=0.1.7"
rayon = "1.10"
static-lang-word-lists = "0.3.0"
